Config url via file.
svn path=/onderwijs/intern/openedge/openedge-util/trunk/; revision=282